# pipe-network

./: .gitignore  2018_03_28.py  2018_04_06.py  CMakeLists.txt  Doxyfile  Fixed_topology__variables_unknown.py  README.md  SecondNR.py  Todini_0406.py  Todini_Bing.py  Todini_Bing_v2.py  Todini_example-first trial.py  Todini_fsolve_0410.py  Todini_general0319-AlbertoSilvio.py  Todini_general0328-AlbertoSilvio.py  Todini_general0406-AlbertoSilvio.py  dco.md  license.md  test_fsolve.py
.circleci/: config.yml
benchmarks/: Honai_network_nodes.csv  Honai_network_pipes.csv  Net1c.inp  Net1c_single.inp  Net_large.inp  Net_m.inp  Net_small.inp  Netc.inp  ky1.inp  ky10.inp  ky12.inp  ky15.inp  ky2.inp  ky3.inp  ky4.inp  ky5.inp  ky6.inp  ky7.inp  ky8.inp  ky9.inp  test_net.inp  test_net_broken.inp  test_net_valve.inp  todini_network_node.csv  todini_network_node_iotest.csv  todini_network_pipe.csv  todini_network_pipe_iotest.csv
benchmarks/small/: branch.inp  synthetic10.inp  synthetic20.inp  synthetic50.inp  valves_test.inp
clang-tools/: format.sh
cmake/: FindMKL.cmake
include/: LU_solver.h  cuda_unsym.h  curves.h  eigen_cg.h  eigen_cg_lem.h  eigen_gmres.cc  eigen_gmres.h  factory.h  gmres.cc  gmres.h  hydralic_sim.h  index_manager.h  input.h  io.h  io_utils.h  junction.h  link.h  matrix_assembler.cc  matrix_assembler.h  matrix_assembler_components.h  mesh.cc  mesh.h  mesh_components.h  mkl_unsym.h  node.h  node_base.h  output.h  pardiso_unsym.h  pipe.cc  pipe.h  pump.h  reservoir.h  settings.h  solver.h  valve.h  valve_graph.h  valve_graph_components.h
pipeline.data_to_sparse.matrix/: README.md  Todini_large_matrix.py  lists_to_sparse.matrix.py  pipeline.data_to_lists.py
src/: LU_solver.cc  cuda_unsym.cc  cuda_unsym.cpp  curves.cc  eigen_cg.cc  eigen_cg_lem.cc  eigen_gmres.cc  hydralic_sim.cc  index_manager.cc  input.cc  io.cc  io_utils.cc  main.cc  matrix_assembler.cc  matrix_assembler_components.cc  mesh.cc  mesh_components.cc  mkl_unsym.cc  node.cc  output.cc  pardiso_unsym.cc  pipe.cc  pump.cc  valve.cc  valve_graph.cc  valve_graph_components.cc
test_files/: test_net.inp  test_net_broken.inp  test_net_pdd.inp  test_net_pump.inp  test_net_valve.inp
tests/: curve_test.cc  eigen_gmres_test.cc  gmres_test.cc  hydraulic_sim_test.cc  input_test.cc  io_test.cc  link_test.cc  matrix_assembler_test.cc  matrix_assembler_test_full.cc  matrix_assembler_test_leak.cc  mesh_test.cc  node_test.cc  output_test.cc  pipe_test.cc  python_test.cc  sim_pressure_test.cc  solver_test.cc  test.cc  todini_example_test.cc  todini_no_demand.cc  valve_graph_test.cc
